--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^0.14.5",
     "react-motion": "^0.3.1",
     "react-native": "github:exponentjs/react-native#2016-01-02",
+    "react-native-drawer-layout": "iodine/react-native-drawer-layout#b9008691",
     "react-redux": "^3.1.0",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.3"
